--- a/markdown.css
+++ b/markdown.css
@@ -15,16 +15,28 @@
         margin: 10px auto;
     }
 }
-.markdown-body h1, h2, h3, h4 {
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4 {
     color: #111111;
     font-weight: 400;
     margin-top: 1em;
 }
 
-.markdown-body h1, h2, h3, h4, h5 {
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4,
+.markdown-body h5 {
 	font-family: Georgia, Palatino, serif;
 }
-.markdown-body h1, h2, h3, h4, h5, dl{
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4,
+.markdown-body h5,
+.markdown-body dl{
     margin-bottom: 16px;
     padding: 0;
 }
@@ -41,7 +53,8 @@
     font-size: 36px;
     line-height: 42px;
 }
-.markdown-body h1, h2 {
+.markdown-body h1,
+.markdown-body h2 {
     border-bottom: 1px solid #EFEAEA;
     padding-bottom: 10px;
 }
@@ -71,7 +84,8 @@
 .markdown-body a:visited {
     /*color: purple;*/
 }
-.markdown-body ul, ol {
+.markdown-body ul,
+.markdown-body ol {
     padding: 0;
     padding-left: 18px;
     margin: 0;
@@ -79,16 +93,20 @@
 .markdown-body li {
     line-height: 24px;
 }
-.markdown-body p, ul, ol {
+.markdown-body p,
+.markdown-body ul,
+.markdown-body ol {
     font-size: 16px;
     line-height: 24px;
 }
 
-.markdown-body ol ol, ul ol {
+.markdown-body ol ol,
+.markdown-body ul ol {
     list-style-type: lower-roman;
 }
 
-.markdown-body code, pre {
+.markdown-body code,
+.markdown-body pre {
     font-family: Consolas, Monaco, Andale Mono, monospace;
     background-color:#f7f7f7;
     color: inherit;
@@ -136,7 +154,7 @@
     padding: 0 0 0 2em;
     margin-left:0;
 }
-.markdown-body blockquote  cite {
+.markdown-body blockquote cite {
     font-size:14px;
     line-height:20px;
     color:#bfbfbf;
@@ -190,11 +208,13 @@
     vertical-align: baseline;
     *vertical-align: middle;
 }
-.markdown-body button, input {
+.markdown-body button,
+.markdown-body input {
     line-height: normal;
     *overflow: visible;
 }
-.markdown-body button::-moz-focus-inner, input::-moz-focus-inner {
+.markdown-body button::-moz-focus-inner,
+.markdown-body input::-moz-focus-inner {
     border: 0;
     padding: 0;
 }
@@ -205,11 +225,13 @@
     cursor: pointer;
     -webkit-appearance: button;
 }
-.markdown-body input[type=checkbox], input[type=radio] {
+.markdown-body input[type=checkbox],
+.markdown-body input[type=radio] {
     cursor: pointer;
 }
 /* override default chrome & firefox settings */
-.markdown-body input:not([type="image"]), textarea {
+.markdown-body input:not([type="image"]),
+.markdown-body textarea {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
@@ -234,7 +256,8 @@
     line-height: normal;
     margin-bottom: 18px;
 }
-.markdown-body input[type=checkbox], input[type=radio] {
+.markdown-body input[type=checkbox],
+.markdown-body input[type=radio] {
     cursor: pointer;
     margin-bottom: 0;
 }
@@ -255,7 +278,8 @@
     -moz-border-radius: 3px;
     border-radius: 3px;
 }
-.markdown-body select, input[type=file] {
+.markdown-body select,
+.markdown-body input[type=file] {
     height: 27px;
     line-height: 27px;
 }
@@ -280,7 +304,9 @@
     -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-.markdown-body input[type=text]:focus, input[type=password]:focus, textarea:focus {
+.markdown-body input[type=text]:focus,
+.markdown-body input[type=password]:focus,
+.markdown-body textarea:focus {
     outline: none;
     border-color: rgba(82, 168, 236, 0.8);
     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
@@ -355,7 +381,8 @@
     -ms-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
 }
-.markdown-body table td, .table th {
+.markdown-body table td,
+.markdown-body .table th {
     border-left: 1px solid #ccc;
     border-top: 1px solid #ccc;
     padding: 10px;
@@ -379,7 +406,8 @@
     border-left: 1px solid #ccc;
 }
 
-.markdown-body table td:first-child, table th:first-child {
+.markdown-body table td:first-child,
+.markdown-body table th:first-child {
     border-left: none;
 }
 
